tests/sksl/errors/LayoutInFunctions.glsl
### Compilation failed:

error: 19: layout qualifier 'origin_upper_left' is not permitted here
error: 19: layout qualifier 'override_coverage' is not permitted here
error: 19: layout qualifier 'push_constant' is not permitted here
error: 19: layout qualifier 'blend_support_all_equations' is not permitted here
error: 19: layout qualifier 'srgb_unpremul' is not permitted here
error: 19: layout qualifier 'key' is not permitted here
error: 19: layout qualifier 'location' is not permitted here
error: 19: layout qualifier 'offset' is not permitted here
error: 19: layout qualifier 'binding' is not permitted here
error: 19: layout qualifier 'index' is not permitted here
error: 19: layout qualifier 'set' is not permitted here
error: 19: layout qualifier 'builtin' is not permitted here
error: 19: layout qualifier 'input_attachment_index' is not permitted here
error: 19: layout qualifier 'max_vertices' is not permitted here
error: 19: layout qualifier 'invocations' is not permitted here
error: 19: layout qualifier 'when' is not permitted here
error: 19: layout qualifier 'ctype' is not permitted here
error: 39: layout qualifier 'origin_upper_left' is not permitted here
error: 39: layout qualifier 'override_coverage' is not permitted here
error: 39: layout qualifier 'push_constant' is not permitted here
error: 39: layout qualifier 'blend_support_all_equations' is not permitted here
error: 39: layout qualifier 'srgb_unpremul' is not permitted here
error: 39: layout qualifier 'key' is not permitted here
error: 39: layout qualifier 'location' is not permitted here
error: 39: layout qualifier 'offset' is not permitted here
error: 39: layout qualifier 'binding' is not permitted here
error: 39: layout qualifier 'index' is not permitted here
error: 39: layout qualifier 'set' is not permitted here
error: 39: layout qualifier 'builtin' is not permitted here
error: 39: layout qualifier 'input_attachment_index' is not permitted here
error: 39: layout qualifier 'max_vertices' is not permitted here
error: 39: layout qualifier 'invocations' is not permitted here
error: 39: layout qualifier 'when' is not permitted here
error: 39: layout qualifier 'ctype' is not permitted here
34 errors
